--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,16 @@
     background: white; 
     z-index: 100;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+}   
 .header .inner {
     height: 100%;  
     padding: 0 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.header ul {
+    display: flex;    
 }
 .header li {
     font-size: 20px;
@@ -356,6 +359,7 @@ footer .logo img {
     }
     
 }
+
 
 
 
