--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@
     border: none;
     cursor: pointer;
 }
+.close_btn {
+    display: none;
+    position: absolute;
+    z-index: 20;
+}
+.close_btn.show {
+    display: block;
+}
 /* INTRO (배경 이미지 + 캐러셀) */
 .intro .inner{
     position: relative;
@@ -285,7 +293,7 @@ footer .logo img {
         width: 100%;
         height: 100%;
         background-color: #333;
-        z-index: 999;
+        z-index: 10;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
@@ -363,6 +371,7 @@ footer .logo img {
     }
     
 }
+
 
 
 
