--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 
-* {
-    box-sizing: border-box;
-}
+* {box-sizing: border-box;}
+
 .inner {
     width: 100%;
     padding: 0 50px;
@@ -16,41 +15,45 @@
     width: 100%;
     height: 70px;  
     background: white; 
-    z-index: 100;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}   
+    z-index: 100;
+}
+
 .header .inner {
-    height: 100%;  
-    padding: 0 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100%;  
+    padding: 0 50px;
 }
-.header ul {
-    display: flex;    
-}
+
+.header ul {display: flex;}
+
 .header li {
-    font-size: 20px;
     padding: 0 15px;
+    font-size: 20px;
 }
+
 .header .logo img {
     width: 200px;
     height: auto;
 }
+
 .nav-menu {
     display: flex;
     gap: 20px;
 }
+
 .hamburger {
     display: none;
-    font-size: 24px;
     background: none;
     border: none;
+    font-size: 24px;
     cursor: pointer;
 }
-.close_btn {
-    display: none;
-}
+
+.close_btn {display: none;}
+
 /* INTRO (배경 이미지 + 캐러셀) */
 .intro .inner{
     position: relative;
@@ -64,23 +67,27 @@
     text-align: center;
     color: white;
 }
+
 .intro .intro-content {
-    z-index: 10;
     position: absolute;
     left: 200px;
+    z-index: 10;
 }
+
 .intro h1 {
-    font-size: 36px;
-    text-align: left;
     max-width: 300px;
     padding-bottom: 30px;
+    font-size: 36px;
+    text-align: left;
 }
 
 .intro p {
-    font-size: 18px;
-    text-align: left;
     max-width: 350px;
+    text-align: left;
+    line-height: 1.2;
+    font-size: 18px;
 }
+
 .github-btn {
     position: relative;
     z-index: 10;
@@ -91,14 +98,12 @@
     color: white;
     text-decoration: none;
     font-size: 16px;
-    font-weight: bold;
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
 }
 
-.github-btn:hover {
-    background-color: #555; 
-}
+.github-btn:hover {background-color: #555; }
+
 .carousel {
     position: relative;
     width: 100%;
@@ -192,8 +197,8 @@
 }
 
 .custom h2 {
-    font-size: 32px;
     margin-bottom: 40px;
+    font-size: 32px;
 }
 
 .gallery {
@@ -211,25 +216,23 @@
     transition: transform 0.3s ease;
 }
 
-.gallery img:hover {
-    transform: scale(1.05);
-}
+.gallery img:hover {transform: scale(1.05);}
 
 /*모달 스타일 */
 .modal {
-    opacity: 0; 
-    visibility: hidden; 
     position: fixed;
-    z-index: 10;
-    left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    left: 0;
     display: flex; 
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    opacity: 0; 
+    visibility: hidden; 
+    background-color: rgba(0, 0, 0, 0.8);
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    z-index: 10;
 }
 
 .modal.active {
@@ -242,6 +245,7 @@
     max-height: 80%;
     border-radius: 10px;
 }
+
 .close {
     position: absolute;
     top: 20px;
@@ -253,11 +257,11 @@
 
 /* 푸터 */
 footer .inner {
-    background: rgb(35, 35, 35);
-    color: white;
-    text-align: left;
     padding: 70px;
     padding-left: 200px;
+    text-align: left;
+    background: rgb(35, 35, 35);
+    color: white;
 }
 
 footer .logo img {
@@ -267,19 +271,17 @@ footer .logo img {
 
 /* 반응형 스타일 */
 @media (max-width: 1024px) {
-    .header .inner {
-        padding: 0 20px;
-    }
+    .header .inner {padding: 0 20px;}
 }
 
 @media (max-width: 810px) {
-    .header {
-        height: 60px;
-    }
+    .header {height: 60px;}
+
     .header ul {
         display: block;
         color: #fff;
     }
+
     .nav-menu {
         display: none; 
         position: fixed;
@@ -287,95 +289,88 @@ footer .logo img {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #333;
-        z-index: 10;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        background-color: #333;
+        z-index: 10;
     }
+
     .nav-menu.active {
         display: flex;
         flex-direction: column;
         padding: 20px;
     }
-    ul > li {
-        margin-bottom: 20px;
-    }
-    .hamburger {
-        display: block;
-    }
+
+    ul > li {margin-bottom: 20px;}
+
+    .hamburger {display: block;}
+
     .close_btn {
-        display: block;
         position: absolute;
         top: 3px;
         right: 10px;
+        display: block;
         color: #fff;
         background: transparent;
         font-size: 25px;
         cursor: pointer;
         z-index: 20;
     }
-    .intro {
-        height: 300px;
-    }
+
+    .intro {height: 300px;}
+
     .intro .intro-content {
         position: absolute;
         left: 100px;
     }
+
     .intro h1 {
-        font-size: 5vw;
-        text-align: left;
-        font-weight: bold;
         padding-bottom: 30px;
         max-width: 220px;
-    }
-    .intro p {
-        font-size: 3vw;
+        font-size: 5vw;
         text-align: left;
+    }
+
+    .intro p {
         max-width: 270px;
+        text-align: left;
+        font-size: 3vw;
     }
-    .cards .inner {
-        margin-top: 300px;
-    }
-    footer .inner {
-        padding-left: 100px;
-    }
+
+    .cards .inner {margin-top: 300px;}
+
+    footer .inner {padding-left: 100px;}
 }
+
 @media (max-width: 376px) {
-    .header {
-        height: 60px;
-    }
-    .intro {
-        height: 300px;
-    }
-    .intro h1 {
-        font-size: 28px;
-    }
+    .header {height: 60px;}
+
+    .intro {height: 300px;}
+
+    .intro h1 {font-size: 28px;}
+
     .intro .intro-content {
         position: absolute;
         left: 80px;
     }
     
     .intro h1 {
-        font-size: 5vw;
-        text-align: left;
-        font-weight: bold;
         max-width: 150px;
         padding-bottom: 30px;
+        font-size: 5vw;
+        text-align: left;
     }
     
     .intro p {
-        font-size: 3vw;
-        text-align: left;
         max-width: 200px;
+        text-align: left;
+        font-size: 3vw;
     }
-    .card {
-        width: 90%;
-    }
-    footer .inner {
-        padding-left: 50px;
-    }
-    
+
+    .card {width: 90%;}
+
+    footer .inner {padding-left: 50px;}
 }
 
 
